fix scrollbar

--- a/src/components/Terminal/Terminal.css
+++ b/src/components/Terminal/Terminal.css
@@ -87,7 +87,7 @@
 	border: none;
 	color: white;
 	outline: none;
-	width: 100%;
+	width: 50%;
 	height: 100%;
 	cursor: default;
 	font-family: monospace;
